needed dark mode just because

--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
         align-items: center;
         font-family: orbitron, sans-serif;
        }
+       @media only screen and (prefers-color-scheme: dark) {
+         body {
+           background-color: black;
+           color: white;
+         }
+       }
     </style>
   </head>
   <body>
